--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -2,7 +2,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0.5rem 0;
+    padding: 0.5rem 1rem;
+    box-shadow: 0px 0px 2px var(--accent);
+    backdrop-filter: blur(5px);
 }
 
 .logo {
